--- a/second_page.html
+++ b/second_page.html
@@ -8,6 +8,14 @@
 	</head>
 	<body>
 	    <a href="first_page.html">Переход на страницу 1</a>
+		<nav class="navbar bg-body-tertiary">
+		  <div class="container-fluid">
+			<form class="d-flex" role="search">
+			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+			  <button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		  </div>
+		</nav>
 		<form action="post">
 		     <label for="login" class="form-label">Введите логин</label>
 		     <input id="login" type="text" class="form-control form-control-lg">
